--- a/copied from the web/third try/main.css
+++ b/copied from the web/third try/main.css
@@ -4,10 +4,23 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #7681B3;
+    background-color :powderblue;
   }
-  
-  .presentational-container {
+  hr {
+    color: #ff6699;
+    border: 2px solid #ff6699;
+    border-top: none;
+  }
+
+  a {
+    text-decoration:  none;
+    color: #333333;
+  }
+  /* .pf {
+    display:  inline-block;
+  } */
+
+   .presentational-container {
     padding: 20px;
     box-shadow: 2px 2px 10px 5px;
     background-color: #fff;
@@ -50,7 +63,7 @@ body {
   td.full-name {
     font-weight: bold;
     color: #232C9F;
-    font-size: 18px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -59,43 +72,56 @@ body {
     color: #333333;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 0.5;
   }
   
   td.website {
     padding-bottom: 10px;
     vertical-align: top;
     color: #333333;
-    font-size: 14px;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+  }
+
+  td.website p {
+    margin: 0;
+    padding: 0;
+  }
+
+  td.website p img {
+    vertical-align: middle;
   }
   
-  td.website a {
+  /* td.website a {
     color: #4BAFDB;
     text-decoration: none;
     font-weight: normal;
     font-size: 14px;
   }
-  
-  td.social-icons {
+   */
+  /* .social-icons {
     padding-top: 5px;
-  }
+  } */
   
-  td.social-icons ul {
+.social-icons{
     list-style: none;
     padding: 0;
+    padding-top:  22px;
     margin: 0;
     height: 25px;
+    text-align: center;
   }
   
-  td.social-icons li {
+.social-icons li {
     display: inline-block;
   }
   
-  td.social-icons a {
+.social-icons a {
     text-decoration: none;
   }
   
-  td.social-icons img {
+  .social-icons li a img {
     width: 25px;
     height: 25px;
   }
